--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,10 @@
 #app {
   font-family: sans-serif;
+  padding: 1em;
+}
+
+.title {
+  margin-top: 0;
 }
 
 .input--uncommited {
@@ -24,4 +29,77 @@
 
 .counter__unit--active {
   background-color: #FC0;
+}
+
+.square {
+  width: 50%;
+  position: relative;
+}
+
+.square--half {
+  width: 50%;
+}
+
+.square--max-20 {
+  max-width: 20em;
+}
+
+.square::after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+
+.startstop__wrapper {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.startstop__checkbox {
+  opacity: 0;
+  position: absolute;
+}
+
+.startstop__label {
+  cursor: pointer;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 1.5em;
+  color: #555
+}
+
+.startstop__label::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: solid 2px black;
+  box-sizing: border-box;
+}
+
+.startstop__label::after {
+  content: "";
+  opacity: 0;
+  position: absolute;
+  transform: rotate(45deg);
+  height: 90%;
+  width: 90%;
+  border-radius: 50%;
+  border: solid 2px black;
+  box-sizing: border-box;
+  background-color: #FC0;
+  left: 5%;
+  z-index: -1;
+}
+
+.startstop__checkbox:checked+.startstop__label::after {
+  opacity: 1;
 }
