--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,14 @@
 #app {
   font-family: sans-serif;
   padding: 1em;
+  box-sizing: border-box;
+  max-width: 43em;
+  border: solid 2px black;
+  background: #555;
 }
 
 .title {
-  margin-top: 0;
+  margin: 0 0 1rem 0;
 }
 
 .input--uncommited {
@@ -13,26 +17,28 @@
 
 .counter {
   width: 100%;
-  padding: 1em 0;
+  padding: 1em;
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box;
 }
 
 .counter__unit {
-  height: 2em;
-  max-width: 2em;
-  width: 5%;
-  background-color: #DDD;
-  border-radius: 0.25em;
-  border: solid 1px #DDD;
+  height: 1.5em;
+  width: 1.5em;
+  background-color: #CCC;
+  border-radius: 50%;
   display: inline-block;
   margin: 0 0.5%;
+  box-shadow: inset 0 0 6px #555;
 }
 
 .counter__unit--active {
   background-color: #FC0;
+  box-shadow: 0 0 6px #FC0, inset 0 0 3px #555;
 }
 
 .square {
-  width: 50%;
   position: relative;
 }
 
@@ -54,6 +60,7 @@
   position: absolute;
   height: 100%;
   width: 100%;
+  background: #EEE;
 }
 
 .startstop__checkbox {
@@ -71,7 +78,11 @@
   justify-content: center;
   text-align: center;
   font-size: 1.5em;
-  color: #555
+  color: #555;
+}
+
+.startstop__label span {
+  z-index: 2;
 }
 
 .startstop__label::before {
@@ -97,7 +108,7 @@
   box-sizing: border-box;
   background-color: #FC0;
   left: 5%;
-  z-index: -1;
+  z-index: 1;
 }
 
 .startstop__checkbox:checked+.startstop__label::after {
