--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,16 @@
-#app {
+body {
   font-family: sans-serif;
-  padding: 1em;
-  box-sizing: border-box;
-  max-width: 43em;
-  border: solid 2px black;
+  overscroll-behavior: none;
   background: #555;
+  position: fixed;
+  overflow: hidden;
+  margin: 0;
+  width: 100%;
+}
+
+#app {
+  padding: 1em;
+  max-width: 43em;
 }
 
 .title {
@@ -20,6 +26,7 @@
   font-size: 1.5em;
   width: 4em;
   cursor: pointer;
+  border: solid 2px black;
 }
 
 .numeric-input__label {
@@ -34,20 +41,25 @@
 
 .counter {
   width: 100%;
-  padding: 2em 1em 0 1em;
+  padding: 2em 0 0 0;
   display: flex;
   justify-content: space-between;
   box-sizing: border-box;
 }
 
 .counter__unit {
-  height: 1.5em;
-  width: 1.5em;
+  width: 5%;
   background-color: #CCC;
   border-radius: 50%;
   display: inline-block;
   margin: 0 0.5%;
   box-shadow: inset 0 0 6px #555;
+}
+
+.counter__unit::after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
 }
 
 .counter__unit--active {
@@ -83,6 +95,11 @@
 .startstop__checkbox {
   opacity: 0;
   position: absolute;
+}
+
+.startstop__checkbox:focus + .startstop__label::before, .numeric-input:focus {
+  outline: none;
+  box-shadow: 0 0 0 5px #FC0;
 }
 
 .startstop__label {
